subprojects/ere/ere/tests/ui/bind_named_missing_named.stderr
error: Named capture group `last` has no corresponding field in the struct.
 --> tests/ui/bind_named_missing_named.rs:5:13
  |
5 |     #[regex(r"^(?<first>.)\. (?<last>.+)$", bind = Named)]
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `Partial`
  --> tests/ui/bind_named_missing_named.rs:13:13
   |
13 |     let _ = Partial::exec("J. Simpson");
   |             ^^^^^^^
   |             |
   |             use of undeclared type `Partial`
   |             help: a trait with a similar name exists: `PartialEq`
